test/scc_test/expr/semantic-errors/008.t
void test()
{
    struct {int x;} a;
    ++a;
}